<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:text="@string/marca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textMarca"
        android:textSize="14sp"
        android:layout_row="0"
        android:layout_column="0" />

    <EditText
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editMarca"
        android:layout_row="1"
        android:layout_column="0" />

    <TextView
        android:text="@string/auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textAuto"
        android:textSize="14sp"
        android:layout_row="2"
        android:layout_column="0" />

    <EditText
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editAuto"
        android:layout_row="3"
        android:layout_column="0" />

    <TextView
        android:text="@string/modelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textModelo"
        android:layout_row="4"
        android:layout_column="0"
        android:textSize="14sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_row="5"
        android:layout_column="0"
        android:id="@+id/editModelo" />

    <TextView
        android:text="@string/kilom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:id="@+id/textKm" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_row="7"
        android:layout_column="0"
        android:ems="10"
        android:id="@+id/editKm" />

    <TextView
        android:text="@string/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="0"
        android:id="@+id/textCmts" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:layout_row="9"
        android:layout_column="0"
        android:ems="10"
        android:id="@+id/editCmts" />
    <TextView
        android:text="@string/autonuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="10"
        android:layout_column="0"
        android:id="@+id/textAutnvo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:layout_row="11"
        android:layout_column="0"
        android:ems="10"
        android:id="@+id/editAutnvo" />

    <Button
        android:text="@string/dale"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_row="12"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:id="@+id/avanza" />
</GridLayout>

